# dutch-app

./: README.md
nederlandsing/: README.md  pubspec.yaml
nederlandsing/android/app/: build.gradle
nederlandsing/android/app/src/main/: AndroidManifest.xml
nederlandsing/android/app/src/main/kotlin/com/example/nederlandsing/: MainActivity.kt
nederlandsing/android/app/src/profile/: AndroidManifest.xml
nederlandsing/ios/Runner/: Info.plist
nederlandsing/ios/Runner.xcodeproj/: project.pbxproj
nederlandsing/lib/: main.dart  parser.dart
nederlandsing/linux/: CMakeLists.txt  my_application.cc
nederlandsing/test/: widget_test.dart
nederlandsing/web/: index.html  manifest.json
nederlandsing/windows/: CMakeLists.txt
nederlandsing/windows/runner/: Runner.rc  main.cpp
top-1000-harvaster/: Cargo.toml
top-1000-harvaster/src/: main.rs  scaping_info.rs
